# np_eyetracking

./: README.md  pyproject.toml
src/np_eyetracking/: __main__.py  lims_dlc.py
src/np_eyetracking/dlc_lims/: rig_geometry.py  run_dlc.py  session_to_nwb.py  utils.py
